--- a/styles/style.css
+++ b/styles/style.css
@@ -1,97 +1,57 @@
+#background {
+    height:725px;
+    background-color:#d9c2a3;
+}
+
+
+
+body {
+    background-color: #fcfbfb;
+    font-family: Raleway, Arial, sans-serif;
+    font-size:22px;
+    margin:0;
+    padding:0;
+}
+
+.book:hover{
+    color:#d9c2a3;
+    
+}
+
+.book, .join {
+    text-decoration: none;
+    background-color:#d9c2a3;
+    color:black;
+    font-size:18px;
+    padding:15px 30px;
+    margin-top:50px;
+    border-radius:5px;
+    text-align: center;
+    
+}
+
+
+.button-box {
+    text-align:center
+}
+
+
 content{
 
     max-width : 1600px;
     margin: 0 auto;
 }
 
-nav a {
-    text-align: center;
-    color:#d9c2a3;
-    text-decoration: none;
-    
+.card-img {
+
+    border: 10px solid #6f7364;
 }
 
-#hero-msg h1{
-    
-    text-align: center; 
-
-}
-
-#hero-msg h4{
-    text-align:center;
-    width:100%
-}
-
-.button-box {
-    text-align:center
-}
-
-.home-title{
-    color:#d9c2a3;
-}
-.book:hover{
-    color:#d9c2a3;
-}
-
-.book {
-    text-decoration: none;
-    background-color:#fcfbfb;
-}
-.join {
-    color:#d9c2a3;
-    text-decoration: none;
-    
-}
-
-.join:hover {
-    background-color:black;
-}
-
-
-.msg h2 {
-    color:#d9c2a3;
-}
-
-.msg p {
-    color:#d9c2a3;
-}
-
-.msg {
-    background-color: rgba(20,30,13, .7);
-}
-.icon {
-    width: 80px;
-}
-
-h4 {
-    color:#d9c2a3;
-}
-
-main section {
-
-    text-align:center;
-}
-
-#background {
-    height:725px;
-    background-color:#d9c2a3;
-}
-
-body {
-    background-color: #fcfbfb;
-}
-header {
-    background-color:rgba(20,30,13, .7);
-}
-
-nav a:hover {
-    background-color: black;
-    color:#d9c2a3
-}
 
 footer {
-
+    padding:25px 50px;
     background-color:rgba(20,30,13, .7);
+    margin-top: 200px;
 }
 
 footer a {
@@ -111,6 +71,111 @@ footer p a:hover{
 
     text-decoration: underline;
 }
+
+footer .social img {
+    padding-top:15px;
+}
+
+#hero-msg h1{
+    
+    text-align: center; 
+
+}
+
+#hero-msg h4{
+    text-align:center;
+    width:100%
+}
+
+
+h2 {
+    margin:0;
+    color: #fcfbfb
+}
+
+h4 {
+    color:black;
+}
+
+.home-title{
+    color:#d9c2a3;
+    font-size: 2em;
+    margin-top: 10px;
+}
+
+.icon {
+    width: 80px;
+    padding-top:10px;
+}
+
+.join:hover {
+    background-color:black;
+}
+
+
+main section {
+
+    text-align:center;
+}
+
+
+main section img {
+    box-sizing : border-box;
+}
+
+.msg h2 {
+    color: #fcfbfb;
+}
+
+.msg p {
+    color:#fcfbfb;
+    font-size: .8em;
+    padding-bottom: 15px;
+}
+
+.msg {
+    line-height: 1.5em;
+    background-color: #6f7364;
+    padding:35px;
+}
+
+
+header {
+    background-color:rgba(20,30,13, .7);
+}
+
+
 .logo {
     width: 80px;
+    padding-top: 5px;
+}
+
+#logo_link {
+    padding-top: 5px;
+}
+
+
+nav a {
+    padding:35px;
+    text-decoration: none;
+    color: #fcfbfb;
+    text-align: center;
+}
+
+nav a:hover {
+    background-color: black;
+    color:#d9c2a3
+}
+
+/* three images */
+.rivers-card {
+    margin:200px 0;
+}
+
+.camping-card {
+    margin:200px 0;
+}
+
+.rapids-card {
+    margin:200px 0;
 }
