--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,8 @@
 #background {
     height:725px;
     background-color:#d9c2a3;
+    grid-column: 1/11;
+    grid-row: 4/9
 }
 
 
@@ -45,13 +47,29 @@ content{
 .card-img {
 
     border: 10px solid #6f7364;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 
+.card-img, .mountains {
+    width: 100%;
+}
+
+.card-image:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
 
 footer {
     padding:25px 50px;
-    background-color:rgba(20,30,13, .7);
-    margin-top: 200px;
+    
+    background-color: #6f7364;
+    
+    margin-top: 200px; 
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    
 }
 
 footer a {
@@ -76,6 +94,27 @@ footer .social img {
     padding-top:15px;
 }
 
+#hero {
+
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+
+}
 #hero-msg h1{
     
     text-align: center; 
@@ -84,7 +123,9 @@ footer .social img {
 
 #hero-msg h4{
     text-align:center;
-    width:100%
+    width:100%;
+    color: white;
+    
 }
 
 
@@ -96,6 +137,13 @@ h2 {
 h4 {
     color:black;
 }
+
+header {
+    display: grid;
+    grid-template-columns: 150px auto;
+    background-color:rgba(46, 54, 40, 0.7);
+}
+
 
 .home-title{
     color:#d9c2a3;
@@ -112,6 +160,10 @@ h4 {
     background-color:black;
 }
 
+main.home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
 
 main section {
 
@@ -137,12 +189,12 @@ main section img {
     line-height: 1.5em;
     background-color: #6f7364;
     padding:35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 
 
-header {
-    background-color:rgba(20,30,13, .7);
-}
 
 
 .logo {
@@ -152,8 +204,20 @@ header {
 
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
+.mountains {
+    grid-column: 2/7;
+    grid-row: 5/8;
+    width:100%;
+    box-shadow: 5px 5px 10px #6f7364
+}
+nav {
+    display: flex;
+    justify-content: space-around;
+}
 
 nav a {
     padding:35px;
@@ -170,12 +234,65 @@ nav a:hover {
 /* three images */
 .rivers-card {
     margin:200px 0;
+    grid-column:2/4;
+    grid-row:2/3;
 }
 
 .camping-card {
     margin:200px 0;
+    grid-column:5/7;
+    grid-row:2/3;
 }
 
 .rapids-card {
     margin:200px 0;
+    grid-column:8/10;
+    grid-row:2/3;
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+
+    nav, footer {
+        flex-direction: column;
+
+    }
+
+    nav a {
+        display: block;
+        padding: 15px;
+
+    }
+
+    #hero {
+        margin-top:0;
+    }
+    hero-msg {
+        margin-top:0;
+    }
+    hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color:#6f7364
+    }
+    .rivers-card, .camping-card, .rapids-card {
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg{
+        width:80%;
+        display: block;
+        margin:0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
