--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,7 @@ body {
 }
 
 
-content{
+#content{
 
     max-width : 1600px;
     margin: 0 auto;
@@ -103,13 +103,11 @@ footer .social img {
     
 }
 
-#hero-box {
+#hero-box, #river-box {
     grid-column: 1/4;
     justify-self: center;
     grid-row: 1/3;
     z-index: -1;
-
-
 }
 
 #hero-msg {
@@ -159,7 +157,7 @@ h4 {
 
 header {
     display: grid;
-    grid-template-columns: 150px auto;
+    grid-template-columns: 160px auto;
     background-color:rgba(46, 54, 40, 0.7);
 }
 
@@ -219,14 +217,14 @@ main section img {
 
 
 .logo {
-    width: 80px;
+    width: 150px;
     padding-top: 5px;
+
 }
 
 #logo_link {
     padding-top: 5px;
-    justify-self: center;
-    align-self: center;
+    text-align: center;
 }
 
 .mountains {
@@ -269,6 +267,74 @@ nav a:hover {
     margin:200px 0;
     grid-column:8/10;
     grid-row:2/3;
+}
+
+
+#river-img {
+    max-width: 1600px;
+    width:100%;
+    
+}
+
+.river-grid {
+    display: grid;
+    grid-template-columns: 1fr 30px 1fr;
+    margin-top: 20px;
+    
+}
+main img {
+    justify-self:start;
+    grid-column: 1/2; 
+    width:100%;
+
+}
+
+#description {
+    grid-column: 3/4;
+    border: 1px solid black;
+    margin-left: 30 px;
+}
+#description p{
+    overflow-wrap: break-word;
+    display: block;
+    margin-left: 50px;
+    margin-right: 50px;
+    justify-self: left;
+    border: 2px solid black;
+}
+
+.scroll-container {
+    width: 800px;
+    margin: 50px;
+    border: 2px solid black;
+    border-radius: 20px;
+    height: 350px;
+    overflow: hidden;
+    overflow-y: scroll;
+}
+
+::-webkit-scrollbar{
+    width: 20px;
+}
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+}
+
+  /* Handle */
+::-webkit-scrollbar-thumb {
+    background: red; 
+    border-radius: 10px;
+}
+
+  /* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #b30000; 
+}
+.scroll-object {
+    width: 700px;
+    padding: 20px;
 }
 
 @media screen and (max-width: 900px) {
