--- a/styles/style.css
+++ b/styles/style.css
@@ -66,7 +66,7 @@ footer {
     
     background-color: #6f7364;
     
-    margin-top: 200px; 
+    margin-top: 10px; 
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -269,11 +269,15 @@ nav a:hover {
     grid-row:2/3;
 }
 
-
+/* for the rivers.html */
 #river-img {
     max-width: 1600px;
     width:100%;
     
+}
+
+li {
+    text-align:left;
 }
 
 .river-grid {
