--- a/W06-assign/positionstyles.css
+++ b/W06-assign/positionstyles.css
@@ -7,6 +7,8 @@
   grid-template-columns: 1fr 1fr;
   justify-items: center;
   grid-gap: 20px;
+  width: 100%;
+  margin: auto;
   
 }
 
@@ -148,30 +150,34 @@
   /* This is the parent of the activity 5 boxes. */
   margin: auto;
   width: 50%;
+  box-sizing: block;
 }
 .red5 { 
   width: 100%; 
   height: 100px; 
   background-color: red; 
+  border: 1px solid red;
 } 
 .green5 { 
   width: 200px; 
   height: 200px; 
   background-color: green; 
   float:inline-start;
-  margin-bottom: 5px;
-
-} 
+  margin-bottom: 10px;
+  } 
 .yellow5 {
   width: 100%; 
   height: auto; 
   background-color: gold; 
+  border: 1px solid skyblue;
 
 } 
 .blue5 {
   width: 100%; 
   height: 100px; 
   background-color: blue; 
+  border: 1px solid blue;
+  
 } 
 /* Activity 6 styles */ 
 .content6 {
